Add the DDR test function. If you want to use the function, you need 1 define the macro CONFIG_DDR_TEST in the board's config head file,   and then you can add the macro CONFIG_DDR_TEST_CPU CONFIG_DDR_TEST_ADDRLINE   CONFIG_DDR_TEST_DATALINE CONFIG_DDR_TEST_DMA CONFIG_DDR_TEST_CPU_DMA

--- a/arch/mips/cpu/xburst/jz4785/Makefile
+++ b/arch/mips/cpu/xburst/jz4785/Makefile
@@ -33,6 +33,7 @@ COBJS-y += pll.o
 COBJS-y += clk.o
 endif
 COBJS-y += ../ddr_dwc.o
+COBJS-$(CONFIG_DDR_TEST) += ../ddr_test.o
 
 SRCS	:= $(START:.o=.S) $(SOBJS-y:.o=.S) $(COBJS-y:.o=.c)
 OBJS	:= $(addprefix $(obj),$(SOBJS-y) $(COBJS-y))
