Modified for dorado. 1. Remove storage1 and storage2 from partition.tab. 2. Add dorado_android_msc0. 3. Use init for booting Android. 4. Fix GPIO for USB_DETECT.
Change-Id: I3ef1739fe4f38fd9c37469abfc37e1e41c83028d

--- a/boards.cfg
+++ b/boards.cfg
@@ -521,6 +521,7 @@ f4785_uImage_spinor          mips        xburst      f4785               ingenic
 f4785_uImage_spinand         mips        xburst      f4785               ingenic        jz4785      f4785:SPL_SPI_SUPPORT,SPI_NAND
 f4785_uImage_nor             mips        xburst      f4785               ingenic        jz4785      f4785:SPL_NOR_SUPPORT
 dorado_uImage_msc0           mips        xburst      dorado              ingenic        jz4785      dorado:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0
+dorado_android_msc0          mips        xburst      dorado              ingenic        jz4785      dorado:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID
 dorado_uImage_msc1           mips        xburst      dorado              ingenic        jz4785      dorado:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC1
 adp-ag101                    nds32       n1213       adp-ag101           AndesTech      ag101
 adp-ag101p                   nds32       n1213       adp-ag101p          AndesTech      ag101
