modify fastboot command call run_command function

--- a/board/ingenic/mensa/Makefile
+++ b/board/ingenic/mensa/Makefile
@@ -28,6 +28,7 @@ LIB	= $(obj)lib$(BOARD).o
 
 COBJS-y	:= $(BOARD).o
 COBJS-$(CONFIG_VIDEO_JZ4775) += lcd.o
+COBJS-$(CONFIG_CMD_FASTBOOT) += fastboot.o
 
 SRCS	:= $(SOBJS-y:.o=.S) $(COBJS-y:.o=.c)
 OBJS	:= $(addprefix $(obj),$(COBJS-y))
