1, Modify CSPR BUGE 	2, Modify nand boot from android for grus 	3, Modify boards.cfg for grus_android_ddr3 	4, Modify new dwc2 otg driver better to use 	5, Add self polling config for usb interrupt polling function  Changes to be committed: 	modified:   arch/mips/include/asm/arch-jz4775/cpm.h 	modified:   arch/mips/include/asm/arch-jz4780/cpm.h 	modified:   arch/mips/include/asm/arch-jz4785/cpm.h 	modified:   arch/mips/lib/board.c 	modified:   boards.cfg 	modified:   common/cmd_fastboot.c 	modified:   common/main.c 	modified:   drivers/usb/gadget/jz47xx_dwc2_regs.h 	modified:   drivers/usb/gadget/jz47xx_dwc2_udc.c 	modified:   include/configs/burner_jz4775.h 	modified:   include/configs/burner_jz4780.h 	modified:   include/configs/grus.h 	modified:   include/usb/jz47xx_dwc2_udc.h

--- a/boards.cfg
+++ b/boards.cfg
@@ -511,8 +511,8 @@ grus_android_msc1            mips        xburst      grus                ingenic
 grus_uImage_spinor	     mips        xburst      grus                ingenic        jz4780      grus:SPL_SPI_SUPPORT
 grus_uImage_msc0             mips        xburst      grus                ingenic        jz4780      grus:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR,
 grus_uImage_msc1             mips        xburst      grus                ingenic        jz4780      grus:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR,JZ_MMC_SPLMSC=1
-grus_spi_burner              mips        xburst      grus                ingenic        jz4780      grus:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR,JZ_MMC_SPLMSC=1,SPI_BURNER
-grus_android_nand            mips        xburst      grus                ingenic        jz4780		grus:JZ_NAND_MGR
+grus_spi_burner              mips        xburst      grus                ingenic        jz4780	    grus:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR,JZ_MMC_SPLMSC=1,SPI_BURNER
+grus_android_nand            mips        xburst      grus                ingenic        jz4780	    grus:JZ_NAND_MGR,BOOT_ANDROID
 f4785_uImage_msc0            mips        xburst      f4785               ingenic        jz4785      f4785:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0
 f4785_uImage_emmc            mips        xburst      f4785               ingenic        jz4785      f4785:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,SUPPORT_EMMC_BOOT
 f4785_uImage_msc1            mips        xburst      f4785               ingenic        jz4785      f4785:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC1
