megre form branch ingenic-v2013

--- a/tools/ingenic-tools/Makefile
+++ b/tools/ingenic-tools/Makefile
@@ -111,8 +111,10 @@ endif
 
 #########################################################################
 
-# defines $(obj).depend target
+ifndef CONFIG_SPL_BUILD
 include $(obj)logo.mk
+endif
+# defines $(obj).depend target
 include $(SRCTREE)/rules.mk
 
 sinclude $(obj).depend
