--- a/boards.cfg
+++ b/boards.cfg
@@ -503,9 +503,9 @@ burner_jz4775_lpddr          mips        xburst      burner_jz4775       ingenic
 burner_jz4780_ddr3           mips        xburst      burner_jz4780       ingenic        jz4780      burner_jz4780:DDR_TYPE_DDR3
 burner_jz4780_lpddr          mips        xburst      burner_jz4780       ingenic        jz4780      burner_jz4780:DDR_TYPE_LPDDR
 burner_jz4780_lpddr2         mips        xburst      burner_jz4780       ingenic        jz4780      burner_jz4780:DDR_TYPE_LPDDR2
-burner_jz4785_ddr3           mips        xburst      burner_jz4785       ingenic        jz4785      burner_jz4785:DDR_TYPE_DDR3
-burner_jz4785_lpddr          mips        xburst      burner_jz4785       ingenic        jz4785      burner_jz4785:DDR_TYPE_LPDDR
-burner_jz4785_lpddr2         mips        xburst      burner_jz4785       ingenic        jz4785      burner_jz4785:DDR_TYPE_LPDDR2
+burner_m200_ddr3             mips        xburst      burner_m200         ingenic        m200        burner_m200:DDR_TYPE_DDR3
+burner_m200_lpddr            mips        xburst      burner_m200         ingenic        m200        burner_m200:DDR_TYPE_LPDDR
+burner_m200_lpddr2           mips        xburst      burner_m200         ingenic        m200        burner_m200:DDR_TYPE_LPDDR2
 grus_android_msc0            mips        xburst      grus                ingenic        jz4780      grus:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR,BOOT_ANDROID
 grus_android_msc1            mips        xburst      grus                ingenic        jz4780      grus:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR,JZ_MMC_SPLMSC=1,BOOT_ANDROID
 grus_uImage_spinor	     mips        xburst      grus                ingenic        jz4780      grus:SPL_SPI_SUPPORT
@@ -513,16 +513,16 @@ grus_uImage_msc0             mips        xburst      grus                ingenic
 grus_uImage_msc1             mips        xburst      grus                ingenic        jz4780      grus:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR,JZ_MMC_SPLMSC=1
 grus_spi_burner              mips        xburst      grus                ingenic        jz4780	    grus:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR,JZ_MMC_SPLMSC=1,SPI_BURNER
 grus_android_nand            mips        xburst      grus                ingenic        jz4780	    grus:JZ_NAND_MGR,BOOT_ANDROID
-f4785_uImage_msc0            mips        xburst      f4785               ingenic        jz4785      f4785:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0
-f4785_uImage_emmc            mips        xburst      f4785               ingenic        jz4785      f4785:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,SUPPORT_EMMC_BOOT
-f4785_uImage_msc1            mips        xburst      f4785               ingenic        jz4785      f4785:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC1
-f4785_uImage_nand            mips        xburst      f4785               ingenic        jz4785      f4785:SPL_NAND_SUPPORT
-f4785_uImage_spinor          mips        xburst      f4785               ingenic        jz4785      f4785:SPL_SPI_SUPPORT
-f4785_uImage_spinand         mips        xburst      f4785               ingenic        jz4785      f4785:SPL_SPI_SUPPORT,SPI_NAND
-f4785_uImage_nor             mips        xburst      f4785               ingenic        jz4785      f4785:SPL_NOR_SUPPORT
-dorado_uImage_msc0           mips        xburst      dorado              ingenic        jz4785      dorado:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0
-dorado_android_msc0          mips        xburst      dorado              ingenic        jz4785      dorado:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID
-dorado_uImage_msc1           mips        xburst      dorado              ingenic        jz4785      dorado:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC1
+f4785_uImage_msc0            mips        xburst      f4785               ingenic        m200      f4785:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0
+f4785_uImage_emmc            mips        xburst      f4785               ingenic        m200      f4785:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,SUPPORT_EMMC_BOOT
+f4785_uImage_msc1            mips        xburst      f4785               ingenic        m200      f4785:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC1
+f4785_uImage_nand            mips        xburst      f4785               ingenic        m200      f4785:SPL_NAND_SUPPORT
+f4785_uImage_spinor          mips        xburst      f4785               ingenic        m200      f4785:SPL_SPI_SUPPORT
+f4785_uImage_spinand         mips        xburst      f4785               ingenic        m200      f4785:SPL_SPI_SUPPORT,SPI_NAND
+f4785_uImage_nor             mips        xburst      f4785               ingenic        m200      f4785:SPL_NOR_SUPPORT
+dorado_uImage_msc0           mips        xburst      dorado              ingenic        m200      dorado:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0
+dorado_android_msc0          mips        xburst      dorado              ingenic        m200      dorado:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID
+dorado_uImage_msc1           mips        xburst      dorado              ingenic        m200      dorado:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC1
 adp-ag101                    nds32       n1213       adp-ag101           AndesTech      ag101
 adp-ag101p                   nds32       n1213       adp-ag101p          AndesTech      ag101
 adp-ag102                    nds32       n1213       adp-ag102           AndesTech      ag102
