--- a/board/ingenic/dorado/Makefile
+++ b/board/ingenic/dorado/Makefile
@@ -1,5 +1,5 @@
 #
-# Ingenic f4785 makefile
+# Ingenic dorado makefile
 #
 # Copyright (c) 2013 Ingenic Semiconductor Co.,Ltd
 # Author: Zoro <ykli@ingenic.cn>
