add the ddr support the soft training

--- a/arch/mips/cpu/xburst/m200/Makefile
+++ b/arch/mips/cpu/xburst/m200/Makefile
@@ -34,6 +34,7 @@ COBJS-y += clk.o
 endif
 COBJS-y += ../ddr_dwc.o
 COBJS-$(CONFIG_DDR_TEST) += ../ddr_test.o
+COBJS-$(CONFIG_SPL_DDR_SOFT_TRAINING) += ../ddr_dqs_training.o
 
 SRCS	:= $(START:.o=.S) $(SOBJS-y:.o=.S) $(COBJS-y:.o=.c)
 OBJS	:= $(addprefix $(obj),$(SOBJS-y) $(COBJS-y))
