--- a/boards.cfg
+++ b/boards.cfg
@@ -522,7 +522,8 @@ f4785_uImage_spinand         mips        xburst      f4785               ingenic
 f4785_uImage_nor             mips        xburst      f4785               ingenic        m200      f4785:SPL_NOR_SUPPORT
 dorado_uImage_msc0           mips        xburst      dorado              ingenic        m200      dorado:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0
 dorado_android_msc0          mips        xburst      dorado              ingenic        m200      dorado:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID
-dorado_uImage_msc1           mips        xburst      dorado              ingenic        m200      dorado:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC1
+dorado_uImage_msc1           mips        xburst      dorado
+dorado_uImage_rvms           mips        xburst      dorado               ingenic        m200      dorado:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC1
 d2030e_android_msc0          mips        xburst      d2030e              ingenic        m200      d2030e:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID
 pictor_uImage_msc0	     mips        xburst      pictor              ingenic        m200      pictor:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0
 adp-ag101                    nds32       n1213       adp-ag101           AndesTech      ag101
