add the pmu driver for dorado_v20 and add configs for android/linux dorado_v10 and dorado_v20

--- a/drivers/regulator/Makefile
+++ b/drivers/regulator/Makefile
@@ -30,6 +30,7 @@ COBJS-$(CONFIG_REGULATOR) += regulator.o
 endif
 COBJS-$(CONFIG_PMU_ACT8600) += act8600.o
 COBJS-$(CONFIG_PMU_D2041) += d2041_regulator.o
+COBJS-$(CONFIG_PMU_RICOH6x) += ricoh619-regulator.o
 
 COBJS	:= $(COBJS-y)
 SRCS	:= $(COBJS:.o=.c)
