add fornax board config
Change-Id: Id6a08a049636ce8e2ef2b80af6116224016124a2

--- a/boards.cfg
+++ b/boards.cfg
@@ -527,6 +527,7 @@ dorado_v10_android_msc0          mips        xburst      dorado              ing
 dorado_android_msc0          mips        xburst      dorado              ingenic        m200      dorado:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,DORADO_V20,BOOT_ANDROID
 dorado_uImage_msc1           mips        xburst      dorado              ingenic        m200      dorado:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC1
 dorado_uImage_rvms           mips        xburst      dorado              ingenic        m200      dorado:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,RVMS
+fornax_uImage_rvms           mips        xburst      fornax              ingenic        m200      fornax:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0
 pictor_uImage_msc0	     mips        xburst      pictor              ingenic        m200      pictor:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0
 adp-ag101                    nds32       n1213       adp-ag101           AndesTech      ag101
 adp-ag101p                   nds32       n1213       adp-ag101p          AndesTech      ag101
