add truly lcd driver to jz4775-newton

--- a/board/ingenic/newton/Makefile
+++ b/board/ingenic/newton/Makefile
@@ -27,7 +27,9 @@ include $(TOPDIR)/config.mk
 LIB	= $(obj)lib$(BOARD).o
 
 COBJS-y	:= $(BOARD).o
-COBJS-$(CONFIG_VIDEO_JZ4775) += lcd.o
+COBJS-$(CONFIG_VIDEO_BM347WV_F_8991FTGF) += lcd-8991.o
+COBJS-$(CONFIG_VIDEO_TRULY_TFT240240_2_E) += lcd-truly-tft240240.o
+COBJS-$(CONFIG_VIDEO_BYD_BM8766U) += lcd-bydbm8766u.o
 
 SRCS	:= $(SOBJS-y:.o=.S) $(COBJS-y:.o=.c)
 OBJS	:= $(addprefix $(obj),$(COBJS-y))
