--- a/board/ingenic/dorado/Makefile
+++ b/board/ingenic/dorado/Makefile
@@ -30,6 +30,7 @@ COBJS-y	:= $(BOARD).o
 COBJS-$(CONFIG_VIDEO_BM347WV_F_8991FTGF) += lcd-8991.o
 COBJS-$(CONFIG_VIDEO_TRULY_TFT240240_2_E) += lcd-truly-tft240240.o
 COBJS-$(CONFIG_VIDEO_BYD_BM8766U) += lcd-bydbm8766u.o
+COBJS-$(CONFIG_VIDEO_BYD_9177AA) += lcd-9177aa.o
 
 SRCS	:= $(SOBJS-y:.o=.S) $(COBJS-y:.o=.c)
 OBJS	:= $(addprefix $(obj),$(COBJS-y))
