modify ddr_params_creator rely on board.h

--- a/tools/ingenic-tools/Makefile
+++ b/tools/ingenic-tools/Makefile
@@ -42,7 +42,7 @@ TOOLS	:= $(addprefix $(obj),$(TOOLS))
 
 all:	$(obj).depend $(TOOLS)
 
-$(obj)ddr_params_creator:	ddr_params_creator.c $(SRCTREE)/include/config.h
+$(obj)ddr_params_creator:	ddr_params_creator.c $(SRCTREE)/include/configs/$(BOARD).h
 	$(HOSTCC) $(HOSTCFLAGS_NOPED) $(HOSTLDFLAGS) -o $@ $^
 	$(HOSTSTRIP) $@
 
