add the support for nfi to nand

--- a/boards.cfg
+++ b/boards.cfg
@@ -499,6 +499,7 @@ mensa_android_msc1           mips        xburst      mensa               ingenic
 mensa_uImage_msc0            mips        xburst      mensa               ingenic        jz4775      mensa:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR
 mensa_uImage_msc1            mips        xburst      mensa               ingenic        jz4775      mensa:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR,JZ_MMC_SPLMSC=1
 mensa_android_nand           mips        xburst      mensa               ingenic        jz4775		mensa:JZ_NAND_MGR,BOOT_ANDROID
+mensa_linux_nand           mips        xburst      mensa               ingenic        jz4775		mensa:JZ_NAND_MGR,
 newton_uImage_msc0           mips        xburst      newton              ingenic        jz4775      newton:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR
 newton_android_msc0           mips        xburst     newton               ingenic        jz4775 newton:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,BOOT_ANDROID,GPT_AT_TAIL
 burner_jz4775_ddr3           mips        xburst      burner_jz4775       ingenic        jz4775      burner_jz4775:DDR_TYPE_DDR3
@@ -517,6 +518,7 @@ grus_uImage_msc0             mips        xburst      grus                ingenic
 grus_uImage_msc1             mips        xburst      grus                ingenic        jz4780      grus:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR,JZ_MMC_SPLMSC=1
 grus_spi_burner              mips        xburst      grus                ingenic        jz4780	    grus:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR,JZ_MMC_SPLMSC=1,SPI_BURNER
 grus_android_nand            mips        xburst      grus                ingenic        jz4780	    grus:JZ_NAND_MGR,BOOT_ANDROID
+grus_linux_nand            mips        xburst      grus                ingenic        jz4780	    grus:JZ_NAND_MGR,
 f4785_uImage_msc0            mips        xburst      f4785               ingenic        m200      f4785:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0
 f4785_uImage_emmc            mips        xburst      f4785               ingenic        m200      f4785:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,SUPPORT_EMMC_BOOT
 f4785_uImage_msc1            mips        xburst      f4785               ingenic        m200      f4785:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC1
@@ -530,6 +532,7 @@ dorado_v10_android_msc0          mips        xburst      dorado              ing
 dorado_android_msc0          mips        xburst      dorado              ingenic        m200      dorado:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,DORADO_V20,BOOT_ANDROID
 dorado_uImage_msc1           mips        xburst      dorado              ingenic        m200      dorado:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC1
 dorado_uImage_rvms           mips        xburst      dorado              ingenic        m200      dorado:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,RVMS,DORADO_V20
+dorado_linux_nand            mips        xburst      dorado              ingenic        m200      dorado:JZ_NAND_MGR,NAND_NFI,DORADO_V30
 fornax_uImage_rvms           mips        xburst      fornax              ingenic        m200      fornax:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0
 pictor_uImage_msc0	     mips        xburst      pictor              ingenic        m200      pictor:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0
 adp-ag101                    nds32       n1213       adp-ag101           AndesTech      ag101
