support boot android ,suppot burne to nfi:

--- a/boards.cfg
+++ b/boards.cfg
@@ -508,7 +508,7 @@ burner_jz4780_ddr3           mips        xburst      burner_jz4780       ingenic
 burner_jz4780_lpddr          mips        xburst      burner_jz4780       ingenic        jz4780      burner_jz4780:DDR_TYPE_LPDDR
 burner_jz4780_lpddr2         mips        xburst      burner_jz4780       ingenic        jz4780      burner_jz4780:DDR_TYPE_LPDDR2
 paladin_m200_ddr3            mips        xburst      paladin_m200	 ingenic        m200        paladin_m200:GPT_CREATOR
-burner_m200_ddr3             mips        xburst      burner_m200         ingenic        m200        burner_m200:DDR_TYPE_DDR3
+burner_m200_ddr3             mips        xburst      burner_m200         ingenic        m200        burner_m200:DDR_TYPE_DDR3,JZ_NAND_MGR,NAND_NFI
 burner_m200_lpddr            mips        xburst      burner_m200         ingenic        m200        burner_m200:DDR_TYPE_LPDDR
 burner_m200_lpddr2           mips        xburst      burner_m200         ingenic        m200        burner_m200:DDR_TYPE_LPDDR2
 grus_android_msc0            mips        xburst      grus                ingenic        jz4780      grus:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR,BOOT_ANDROID
@@ -533,6 +533,7 @@ dorado_android_msc0          mips        xburst      dorado              ingenic
 dorado_uImage_msc1           mips        xburst      dorado              ingenic        m200      dorado:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC1
 dorado_uImage_rvms           mips        xburst      dorado              ingenic        m200      dorado:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,RVMS,DORADO_V20
 dorado_linux_nand            mips        xburst      dorado              ingenic        m200      dorado:JZ_NAND_MGR,NAND_NFI,DORADO_V30
+dorado_android_nand            mips        xburst      dorado              ingenic        m200      dorado:JZ_NAND_MGR,NAND_NFI,DORADO_V30,BOOT_ANDROID
 fornax_uImage_rvms           mips        xburst      fornax              ingenic        m200      fornax:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0
 pictor_uImage_msc0	     mips        xburst      pictor              ingenic        m200      pictor:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0
 adp-ag101                    nds32       n1213       adp-ag101           AndesTech      ag101
