Add stack and cache initialization. Modify sram initialization. Add the func to jump kernel entry for palldium.

--- a/boards.cfg
+++ b/boards.cfg
@@ -507,8 +507,8 @@ burner_jz4775_lpddr          mips        xburst      burner_jz4775       ingenic
 burner_jz4780_ddr3           mips        xburst      burner_jz4780       ingenic        jz4780      burner_jz4780:DDR_TYPE_DDR3
 burner_jz4780_lpddr          mips        xburst      burner_jz4780       ingenic        jz4780      burner_jz4780:DDR_TYPE_LPDDR
 burner_jz4780_lpddr2         mips        xburst      burner_jz4780       ingenic        jz4780      burner_jz4780:DDR_TYPE_LPDDR2
-paladin_m200_ddr3            mips        xburst      paladin_m200	 ingenic        m200        paladin_m200:GPT_CREATOR
-burner_m200_ddr3             mips        xburst      burner_m200         ingenic        m200        burner_m200:DDR_TYPE_DDR3,JZ_NAND_MGR,NAND_NFI
+palladium_m200_ddr3          mips        xburst      palladium_m200	 ingenic        m200        palladium_m200:GPT_CREATOR,SPL_NOR_SUPPORT
+burner_m200_ddr3             mips        xburst      burner_m200         ingenic        m200        burner_m200:DDR_TYPE_DDR3
 burner_m200_lpddr            mips        xburst      burner_m200         ingenic        m200        burner_m200:DDR_TYPE_LPDDR
 burner_m200_lpddr2           mips        xburst      burner_m200         ingenic        m200        burner_m200:DDR_TYPE_LPDDR2
 grus_android_msc0            mips        xburst      grus                ingenic        jz4780      grus:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR,BOOT_ANDROID
