--- a/board/ingenic/watch/Makefile
+++ b/board/ingenic/watch/Makefile
@@ -32,6 +32,7 @@ COBJS-$(CONFIG_VIDEO_TRULY_TFT240240_2_E) += lcd-truly-tft240240.o
 COBJS-$(CONFIG_VIDEO_BYD_BM8766U) += lcd-bydbm8766u.o
 COBJS-$(CONFIG_VIDEO_BYD_9177AA) += lcd-9177aa.o
 COBJS-$(CONFIG_VIDEO_LH155) += lcd-lh155.o
+COBJS-$(CONFIG_VIDEO_SAMSUNG) += lcd-samsung.o
 
 SRCS	:= $(SOBJS-y:.o=.S) $(COBJS-y:.o=.c)
 OBJS	:= $(addprefix $(obj),$(COBJS-y))
