Add jz4775 fpga test board (f4775) 	modified:   arch/mips/cpu/xburst/ddr_dwc.c 	modified:   arch/mips/cpu/xburst/jz4775/clk.c 	modified:   arch/mips/cpu/xburst/jz4775/jz4775.c 	modified:   arch/mips/cpu/xburst/jz4775/pll.c 	modified:   arch/mips/cpu/xburst/jz4775/start.S 	new file:   arch/mips/cpu/xburst/jz4775/u-boot-nor-spl.lds 	new file:   arch/mips/include/asm/arch-jz4775/spi.h 	new file:   board/ingenic/f4775/Makefile 	new file:   board/ingenic/f4775/config.mk 	new file:   board/ingenic/f4775/f4775.c 	modified:   boards.cfg 	modified:   common/Makefile 	new file:   common/cmd_jzfpga.c 	modified:   drivers/mmc/jz_mmc.c 	modified:   drivers/mmc/mmc_spl.c 	modified:   drivers/nand/driver/nand_driver.c 	modified:   drivers/serial/Makefile 	modified:   drivers/usb/gadget/f_jz_cloner.c 	modified:   drivers/usb/gadget/jz47xx_dwc2_udc.c 	modified:   include/configs/burner_jz4775.h 	new file:   include/configs/f4775.h 	modified:   include/configs/f4785.h 	modified:   tools/ingenic-tools/spi_checksum.c

--- a/boards.cfg
+++ b/boards.cfg
@@ -492,6 +492,12 @@ incaip                       mips        mips32      incaip              -      
 incaip_100MHz                mips        mips32      incaip              -              incaip      incaip:CPU_CLOCK_RATE=100000000
 incaip_133MHz                mips        mips32      incaip              -              incaip      incaip:CPU_CLOCK_RATE=133000000
 incaip_150MHz                mips        mips32      incaip              -              incaip      incaip:CPU_CLOCK_RATE=150000000
+f4775_uImage_nor             mips        xburst      f4775               ingenic        jz4775      f4775:SPL_NOR_SUPPORT
+f4775_uImage_msc0            mips        xburst      f4775               ingenic        jz4775      f4775:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR,JZ_MMC_MSC0
+f4775_uImage_emmc            mips        xburst      f4775               ingenic        jz4775      f4775:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR,JZ_MMC_MSC0,SUPPORT_EMMC_BOOT
+f4775_uImage_msc1            mips        xburst      f4775               ingenic        jz4775      f4775:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR,JZ_MMC_MSC1
+f4775_uImage_nand            mips        xburst      f4775               ingenic        jz4775      f4775:JZ_NAND_MGR
+f4775_uImage_spinor          mips        xburst      f4775               ingenic        jz4775      f4775:SPL_SPI_SUPPORT
 gemini_android_msc0          mips        xburst      gemini              ingenic        jz4775	    gemini:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR,BOOT_ANDROID
 gemini_uImage_msc0           mips        xburst      gemini              ingenic        jz4775      gemini:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR
 mensa_android_msc0           mips        xburst      mensa               ingenic        jz4775      mensa:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR,BOOT_ANDROID
