--- a/boards.cfg
+++ b/boards.cfg
@@ -535,6 +535,7 @@ d2030e_android_msc0          mips        xburst      d2030e              ingenic
 watch_android_msc0             mips    xburst          watch           ingenic         m200    watch:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID
 d2133e_android_msc0             mips    xburst          watch           ingenic         m200    watch:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID
 gk2134e_android_msc0             mips    xburst          watch           ingenic         m200    watch:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID
+s2134e_android_msc0             mips    xburst          watch           ingenic         m200    watch:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID
 pictor_uImage_msc0	     mips        xburst      pictor              ingenic        m200      pictor:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0
 adp-ag101                    nds32       n1213       adp-ag101           AndesTech      ag101
 adp-ag101p                   nds32       n1213       adp-ag101p          AndesTech      ag101
