add the uboot support the ddr2

--- a/boards.cfg
+++ b/boards.cfg
@@ -510,6 +510,7 @@ newton_uImage_msc0           mips        xburst      newton              ingenic
 newton_android_msc0           mips        xburst     newton               ingenic        jz4775 newton:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,BOOT_ANDROID,GPT_AT_TAIL
 burner_jz4775_ddr3           mips        xburst      burner_jz4775       ingenic        jz4775      burner_jz4775:DDR_TYPE_DDR3
 burner_jz4775_lpddr          mips        xburst      burner_jz4775       ingenic        jz4775      burner_jz4775:DDR_TYPE_LPDDR,SPL_DDR_SOFT_TRAINING
+burner_jz4775_ddr2           mips        xburst      burner_jz4775       ingenic        jz4775      burner_jz4775:DDR_TYPE_DDR2
 burner_jz4780_ddr3           mips        xburst      burner_jz4780       ingenic        jz4780      burner_jz4780:DDR_TYPE_DDR3
 burner_jz4780_lpddr          mips        xburst      burner_jz4780       ingenic        jz4780      burner_jz4780:DDR_TYPE_LPDDR
 burner_jz4780_lpddr2         mips        xburst      burner_jz4780       ingenic        jz4780      burner_jz4780:DDR_TYPE_LPDDR2
