change CONFIG_VIDEO_M200 to CONFIG_JZ_LCD_V12.
Change-Id: Ibcec4d80377da0a847b5eb9087e0c8284cff61b4

--- a/drivers/video/Makefile
+++ b/drivers/video/Makefile
@@ -65,7 +65,7 @@ COBJS-$(CONFIG_VIDEO_LH155) += jz_lcd/lcd_panel/lh155.o
 COBJS-$(CONFIG_JZ_MIPI_DSI) += jz_lcd/jz_mipi_dsi/jz_mipi_dsi.o jz_lcd/jz_mipi_dsi/jz_mipi_dsi_lowlevel.o jz_lcd/jz_mipi_dsi/jz_mipi_dsih_hal.o
 COBJS-$(CONFIG_VIDEO_JZ4775) += jz_lcd/backlight_pwm.o jz_lcd/jz4775_lcd.o
 COBJS-$(CONFIG_VIDEO_JZ4780) += jz_lcd/backlight_pwm.o jz_lcd/jz4780_lcd.o
-COBJS-$(CONFIG_VIDEO_M200) += jz_lcd/backlight_pwm.o jz_lcd/jz_lcd_v1_2.o
+COBJS-$(CONFIG_JZ_LCD_V12) += jz_lcd/backlight_pwm.o jz_lcd/jz_lcd_v1_2.o
 
 COBJS	:= $(sort $(COBJS-y))
 SRCS	:= $(COBJS:.o=.c)
