--- a/board/ingenic/fornax/Makefile
+++ b/board/ingenic/fornax/Makefile
@@ -27,7 +27,7 @@ include $(TOPDIR)/config.mk
 LIB	= $(obj)lib$(BOARD).o
 
 COBJS-y	:= $(BOARD).o
-#COBJS-$(CONFIG_VIDEO_M200) += lcd.o
+#COBJS-$(CONFIG_JZ_LCD_V12) += lcd.o
 
 SRCS	:= $(SOBJS-y:.o=.S) $(COBJS-y:.o=.c)
 OBJS	:= $(addprefix $(obj),$(COBJS-y))
