--- a/boards.cfg
+++ b/boards.cfg
@@ -544,6 +544,7 @@ dorado_android_nand            mips        xburst      dorado              ingen
 fornax_uImage_rvms           mips        xburst      fornax              ingenic        m200      fornax:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0
 pawscan_uImage_msc0           mips        xburst      pawscan              ingenic        m200      pawscan:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0
 pictor_uImage_msc0	     mips        xburst      pictor              ingenic        m200      pictor:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0
+icam01m_uImage_rvms           mips        xburst      icam01m              ingenic        m200      icam01m:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0
 adp-ag101                    nds32       n1213       adp-ag101           AndesTech      ag101
 adp-ag101p                   nds32       n1213       adp-ag101p          AndesTech      ag101
 adp-ag102                    nds32       n1213       adp-ag102           AndesTech      ag102
